--- a/PracticasProfesionalesLIS/nbproject/project.properties
+++ b/PracticasProfesionalesLIS/nbproject/project.properties
@@ -41,7 +41,8 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.mysql-connector-java-8.0.20.jar}
+    ${file.reference.mysql-connector-java-8.0.20.jar}:\
+    ${libs.jakartaee-api-8.0.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
