--- a/PracticasProfesionalesLIS/nbproject/project.properties
+++ b/PracticasProfesionalesLIS/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.20.jar=lib\\mysql-connector-java-8.0.20.jar
+file.reference.pdfbox-app-3.0.5.jar=D:\\Descargas\\pdfbox-app-3.0.5.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -42,7 +43,8 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.mysql-connector-java-8.0.20.jar}:\
-    ${libs.jakartaee-api-8.0.classpath}
+    ${libs.jakartaee-api-8.0.classpath}:\
+    ${file.reference.pdfbox-app-3.0.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
