--- a/PracticasProfesionalesLIS/nbproject/project.properties
+++ b/PracticasProfesionalesLIS/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -35,7 +34,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.20.jar=lib\\mysql-connector-java-8.0.20.jar
-file.reference.pdfbox-app-3.0.5.jar=D:\\Descargas\\pdfbox-app-3.0.5.jar
+file.reference.pdfbox-app-2.0.34.jar=lib\\pdfbox-app-2.0.34.jar
+file.reference.pdfbox-app-3.0.5.jar=lib\\pdfbox-app-3.0.5.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -44,10 +44,12 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.mysql-connector-java-8.0.20.jar}:\
     ${libs.jakartaee-api-8.0.classpath}:\
-    ${file.reference.pdfbox-app-3.0.5.jar}
+    ${file.reference.pdfbox-app-3.0.5.jar}:\
+    ${file.reference.pdfbox-app-2.0.34.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
@@ -64,6 +66,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -103,6 +106,8 @@ javafx.preloader.type=none
 javafx.rebase.libs=false
 javafx.run.height=600
 javafx.run.width=800
+jlink.launcher=false
+jlink.launcher.name=PracticasProfesionalesLIS
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
 # Main class for Java launcher
@@ -113,6 +118,7 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=JDK_1.8
 run.classpath=\
     ${dist.jar}:\
