Update: utilidades y PrincipalCoordinador
Método para ir a la ventana necesaria para iniciar el CU de cada botón. Nuevas constantes para títulos y mensajes.

--- a/PracticasProfesionalesLIS/nbproject/private/private.properties
+++ b/PracticasProfesionalesLIS/nbproject/private/private.properties
@@ -5,6 +5,7 @@ do.jar=true
 do.jlink=false
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
+file.reference.pdfbox-app-3.0.5.jar=D:\\Descargas\\OneDrive\\Documents\\GitHub\\PrincipiosDeConstruccion\\PracticasProfesionalesLIS\\lib\\pdfbox-app-2.0.34.jar
 javac.debug=true
 javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
